--- a/css/custom.css
+++ b/css/custom.css
@@ -1,318 +1,342 @@
 html,
 body {
-    width: 100%;
-    height: 100%;
-    font-family: 'Arial','Arial','Arial','Ariel';
+  width: 100%;
+  height: 100%;
+  font-family: "Helvetica Neue","Helvetica Neue","Helvetica Neue","Helvetica Neue";
 }
 
 a {
-    color: rgb(156, 156, 156);
-    -webkit-transition: all .35s;
-    -moz-transition: all .35s;
-    transition: all .35s;
+  color: rgb(156, 156, 156);
+  -webkit-transition: all 0.35s;
+  -moz-transition: all 0.35s;
+  transition: all 0.35s;
+
 }
 
 a:hover,
 a:focus {
-    color: black;
+  color: black;
 }
 
 p {
-    font-size: 16px;
-    line-height: 1.5;
+  font-size: 14px;
+  line-height: 1.5;
+  text-shadow: 1px 1px #000000;
 }
-
+h1{
+    text-shadow: 2px 2px #232121;
+}
+h2{
+    
+}
 header {
-    position: relative;
-    width: 100%;
-    min-height: auto;
-    text-align: center;
-    color: #fff;
-    background-image: url('../images/Teaching.jpg');
-    background-position: center;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    background-size: cover;
-    -o-background-size: cover;
+    border-style: inset ;
+    border-color: rgba(5, 5, 5, 0.3);
+  position: relative;
+  padding: 100px 25px 100px;
+  width: 100%;
+  min-height: auto;
+  text-align: center;
+  color: #fff;
+  background-image: url("../images/Teaching.jpg");
+  background-position: center;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  background-size: cover;
+  -o-background-size: cover;
 }
 
 header .header-content {
-    position: relative;
-    width: 100%;
-    padding: 100px 15px 70px;
-    text-align: center;
+  position: relative;
+  width: 100%;
+  padding: 100px 25px 100px;
+  text-align: center;
 }
 
 header .header-content .header-content-inner h1 {
-    margin-top: 0;
-    margin-bottom: 20px;
-    font-size: 50px;
-    font-weight: 300;
+  margin-top: 0;
+  margin-bottom: 20px;
+  font-size: 50px;
+  font-weight: 300;
 }
 
 header .header-content .header-content-inner p {
-    margin-bottom: 50px;
-    font-size: 16px;
-    font-weight: 300;
-    color: rgba(255,255,255,.7);
+  margin-bottom: 50px;
+  font-size: 16px;
+  font-weight: 300;
+  color: #fff;
 }
 
-@media(min-width:768px) {
-    header {
-        min-height: 100%;
-    }
+@media (min-width: 768px) {
+  header {
+    min-height: 100%;
+  }
 
-    header .header-content {
-        position: absolute;
-        top: 50%;
-        padding: 0 50px;
-        -webkit-transform: translateY(-50%);
-        -ms-transform: translateY(-50%);
-        transform: translateY(-50%);
-    }
+  header .header-content {
+    position: absolute;
+    top: 50%;
+    padding: 0 50px;
+    -webkit-transform: translateY(-50%);
+    -ms-transform: translateY(-50%);
+    transform: translateY(-50%);
+  }
 
-    header .header-content .header-content-inner {
-        margin-right: auto;
-        margin-left: auto;
-        max-width: 1000px;
-    }
+  header .header-content .header-content-inner {
+    margin-right: auto;
+    margin-left: auto;
+    max-width: 1000px;
+  }
 
-	header .header-content .header-content-inner h1 {
-    	font-size: 100px;
-		}
+  header .header-content .header-content-inner h1 {
+    font-size: 100px;
+  }
 
-    header .header-content .header-content-inner p {
-        margin-right: auto;
-        margin-left: auto;
-        max-width: 80%;
-        font-size: 18px;
-    }
+  header .header-content .header-content-inner p {
+    margin-right: auto;
+    margin-left: auto;
+    max-width: 80%;
+    font-size: 18px;
+  }
 }
 
 .section-heading {
-    margin-top: 0;
-    margin-bottom: 20px;
+  margin-top: 0;
+  margin-bottom: 20px;
 }
 /*about me section */
 .intro {
-	color: white;    
-    background-color: rgb(158, 158, 158);
-    padding: 100px 0;
-    text-align: bottom;
+
+  color: white;
+  border-style: solid;
+  border-color: rgba(62, 60, 60, 0.3);
+  background-color: rgb(94, 94, 94);
+  padding: 60px 60px;
+  text-align: justify;
+  -webkit-transform: translateY(-10%);
+  -ms-transform: translateY(-10%);
+  transform: translateY(-10%);
+
 }
+
 /*lets get social section */
 .content {
-    color: rgb(158, 158, 158);
-    padding: 100px 0;
-    background-color: white;
-    text-align: center;
-}
-/* interests section */
-.content-2 {
-    color: white;
-    padding: 140px 0;
-    background-color:rgb(158, 158, 158) ;
-}
-
-.content-3 {
-	padding: 300px 0 40px;
-    text-align: center;
     
+  color: rgb(154, 154, 154);
+  margin: auto ;
+  background-color: white;
+  text-shadow: 1px 1px #524f4f;
+  text-align:  center;
+  
+  ;
 }
+/*Social media buttons in lets get social section*/
+.fa {
+    padding: 25px;
+    font-size: 30px;
+    text-align: left;
+    margin: 0px;
+    border-radius: 5px;
+    text-shadow: 1px 1px #524f4f;
+    
+  }
+  .fa:hover {
+    opacity: 0.5;
+  }
+/* Passions section */
+.content-2 {
+  
+    font-size: 25px;
+    border-style: solid;
+    border-color: rgba(62, 60, 60, 0.3);
+  color: white;
+  text-align: justify;
+  padding: 100px 100px;
+  background-color: rgb(94, 94, 94);
+    text-shadow: 2px 1px #000000;
 
-.promo,
-.promo h3,
-.promo a:link,
-.promo a:visited,
-.promo a:hover,
-.promo a:active {
-    color: rgb(192, 189, 189)e;
-	text-shadow: 0px 0px 40px black;
-    text-decoration: none;
+  
 }
+.section-header {
+  
+    line-height: 70px;
+    text-align: left;
+  }
 
 .promo-item {
-    height: 200px;
-    line-height: 180px;
-    text-align: center;
+  height: 200px;
+  line-height: 180px;
+  text-align: center;
 }
 
 .promo-item:hover {
-    background-size: 110%; 
-    border: 10px solid rgba(5, 5, 5, 0.3);
-    line-height: 160px;
+  background-size: 110%;
+  border: 10px solid rgba(5, 5, 5, 0.3);
+  line-height: 160px;
 }
 
 .promo-item h3 {
-    font-size: 40px;
-    display: inline-block;
-    vertical-align: middle;
+  font-size: 40px;
+  display: inline-block;
+  vertical-align: middle;
 }
 
 .item-1 {
-	background: url('../images/Diving2.jpg');
-	}
-	
+  background: url("../images/Diving2.jpg");
+}
+
 .item-2 {
-	background: url('../images/Coding.jpg');
-	}
-	
+  background: url("../images/Coding.jpg");
+}
+
 .item-3 {
-	background: url('../images/brug.jpg');
-	}
-		
+  background: url("../images/brug.jpg");
+}
+
 .item-1,
 .item-2,
 .item-3 {
-	background-size: cover;
-	background-position: 50% 50%;
-    }
+  background-size: cover;
+  background-position: 50% 50%;
+}
+.pa {
+    text-align:start;
     
-   /*Social media buttons in lets get social section*/
-    .fa {
-        padding: 10px;
-        font-size: 30px;
-        width: 30px;
-        text-align: center;
-        text-decoration: none;
-        margin: 5px 2px;
-        border-radius: 50%;
-      }
-      .fa:hover {
-        opacity: 0.7;
-        
-      }    
-  
+  }
 
 
 .page-footer {
-	text-align: center;
-	}
+  text-align: center;
+}
 
 .page-footer .contact {
-	padding: 60px 0;
-	background-color: gray;
-	color: #fff;
-	}
+    border-style: solid;
+    border-color: rgba(62, 60, 60, 0.3);
+  padding: 15px ;
+  background-color: rgb(94, 94, 94);
+  color: #fff;
+}
 
 .page-footer .contact p {
-	font-size: 22px;
-	font-weight: 300;
-	}
-	
-.content-3 .glyphicon,	
+  font-size: 15px;
+  font-weight: 300;
+  font-size: 15px;
+   
+}
+
+.content-3 .glyphicon,
 .page-footer .contact .glyphicon {
-	font-size: 32px;
-	font-weight: 700;
-	}
-		
+  font-size: 15px;
+  font-weight: 700;
+}
+
 .page-footer .small-print {
-	padding: 50px 0 40px;
-	font-weight: 300;
-	}
+  padding: 10px 10px;
+  font-weight: 300;
+}
 
 .text-light {
-    color: rgba(255,255,255,.7);
+  color: rgba(white);
 }
 
 .navbar-default {
-    border-color: rgba(34,34,34,.05);
-    background-color: #fff;
-    -webkit-transition: all .35s;
-    -moz-transition: all .35s;
-    transition: all .35s;
+  border-color: rgba(34, 34, 34, 0.05);
+  background-color: #fff;
+  -webkit-transition: all 0.35s;
+  -moz-transition: all 0.35s;
+  transition: all 0.35s;
 }
 
 .navbar-default .navbar-header .navbar-brand {
-    color: gray;
+  color: gray;
 }
 
 .navbar-default .navbar-header .navbar-brand:hover,
 .navbar-default .navbar-header .navbar-brand:focus {
+  color: #eb3812;
+}
+
+.navbar-default .nav > li > a,
+.navbar-default .nav > li > a:focus {
+  color: #222;
+}
+
+.navbar-default .nav > li > a:hover,
+.navbar-default .nav > li > a:focus:hover {
+  color: rgba(rgb(94, 94, 94));
+}
+
+.navbar-default .nav > li.active > a,
+.navbar-default .nav > li.active > a:focus {
+  color: rgb(183, 182, 182) !important;
+  background-color: transparent;
+}
+
+.navbar-default .nav > li.active > a:hover,
+.navbar-default .nav > li.active > a:focus:hover {
+    color: rgb(94, 94, 94);
+  background-color: transparent;
+}
+
+@media (min-width: 768px) {
+  .navbar-default {
+    border-color: rgba(255, 255, 255, 0.3);
+    background-color: transparent;
+  }
+
+  .navbar-default .navbar-header .navbar-brand {
+    color: rgba(255, 255, 255, 0.7);
+    letter-spacing: 0.5em;
+  }
+
+  .navbar-default .navbar-header .navbar-brand:hover,
+  .navbar-default .navbar-header .navbar-brand:focus {
+    color: rgb(94, 94, 94);
+  }
+
+  .navbar-default .nav > li > a,
+  .navbar-default .nav > li > a:focus {
+    color: rgba(255, 255, 255, 0.7);
+  }
+
+  .navbar-default .nav > li > a:hover,
+  .navbar-default .nav > li > a:focus:hover {
+    color: #fff;
+  }
+
+  .navbar-default.affix {
+    border-color: #fff;
+    background-color: #fff;
+    box-shadow: 0px 7px 20px 0px rgb(94, 94, 94);
+  }
+
+  .navbar-default.affix .navbar-header .navbar-brand {
+    letter-spacing: 0;
+    color: gray;
+  }
+
+  .navbar-default.affix .navbar-header .navbar-brand:hover,
+  .navbar-default.affix .navbar-header .navbar-brand:focus {
     color: #eb3812;
-}
+  }
 
-.navbar-default .nav > li>a,
-.navbar-default .nav>li>a:focus {
-    color: #222;
-}
+  .navbar-default.affix .nav > li > a,
+  .navbar-default.affix .nav > li > a:focus {
+    color: rgb(94, 94, 94));
+  }
 
-.navbar-default .nav > li>a:hover,
-.navbar-default .nav>li>a:focus:hover {
-    color: rgba(255,255,255,.7);
-}
-
-.navbar-default .nav > li.active>a,
-.navbar-default .nav>li.active>a:focus {
-    color: rgba(255,255,255,.7)!important;
-    background-color: transparent;
-}
-
-.navbar-default .nav > li.active>a:hover,
-.navbar-default .nav>li.active>a:focus:hover {
-    background-color: transparent;
-}
-
-@media(min-width:768px) {
-    .navbar-default {
-        border-color: rgba(255,255,255,.3);
-        background-color: transparent;
-    }
-
-    .navbar-default .navbar-header .navbar-brand {
-        color: rgba(255,255,255,.7);
-        letter-spacing: 0.5em;
-    }
-
-    .navbar-default .navbar-header .navbar-brand:hover,
-    .navbar-default .navbar-header .navbar-brand:focus {
-        color: #fff;
-    }
-
-    .navbar-default .nav > li>a,
-    .navbar-default .nav>li>a:focus {
-        color:rgba(255,255,255,.7);
-    }
-
-    .navbar-default .nav > li>a:hover,
-    .navbar-default .nav>li>a:focus:hover {
-        color: #fff;
-    }
-
-    .navbar-default.affix {
-        border-color: #fff;
-        background-color: #fff;
-        box-shadow: 0px 7px 20px 0px rgba(0,0,0,0.1);
-    }
-
-    .navbar-default.affix .navbar-header .navbar-brand {
-        letter-spacing: 0;
-        color:gray;
-    }
-
-    .navbar-default.affix .navbar-header .navbar-brand:hover,
-    .navbar-default.affix .navbar-header .navbar-brand:focus {
-        color: #eb3812;
-    }
-
-    .navbar-default.affix .nav > li>a,
-    .navbar-default.affix .nav>li>a:focus {
-        color: rgba(255,255,255,.7);
-    }
-
-    .navbar-default.affix .nav > li>a:hover,
-    .navbar-default.affix .nav>li>a:focus:hover {
-        color: rgba(255,255,255,.7);
-    }
+  .navbar-default.affix .nav > li > a:hover,
+  .navbar-default.affix .nav > li > a:focus:hover {
+    color:rgb(94, 94, 94);
+  }
 }
 
 .btn-default {
-    border-color: rgb(145, 142, 142);
-    color: rgba(255,255,255,.7);
-    background-color: rgba(255,255,255,.7);
-    -webkit-transition: all .35s;
-    -moz-transition: all .35s;
-    transition: all .35s;
+  border-color: rgb(145, 142, 142);
+  color: rgb(255, 255, 255);
+  background-color: rgba(255, 255, 255, 0.7);
+  -webkit-transition: all 0.35s;
+  -moz-transition: all 0.35s;
+  transition: all 0.35s;
 }
 
 .btn-default:hover,
@@ -321,15 +345,16 @@ header .header-content .header-content-inner p {
 .btn-default:active,
 .btn-default.active,
 .open > .dropdown-toggle.btn-default {
-    border-color: #eee;
-    color: #222;
-    background-color: #eee;
+  border-color: rgb(94, 94, 94);
+  color: #222;
+  background-color: #eee;
 }
 
 .btn-default:active,
 .btn-default.active,
 .open > .dropdown-toggle.btn-default {
-    background-image: none;
+  background-image: none;
+
 }
 
 .btn-default.disabled,
@@ -350,22 +375,24 @@ fieldset[disabled] .btn-default:active,
 .btn-default.disabled.active,
 .btn-default[disabled].active,
 fieldset[disabled] .btn-default.active {
-    border-color: #fff;
-    background-color: #fff;
+  border-color: rgb(94, 94, 94);
+  background-color: #fff;
 }
 
 .btn-default .badge {
-    color: #fff;
-    background-color: rgba(255,255,255,.7);
+  color:rgb(94, 94, 94);
+  background-color: rgb(94, 94, 94));
 }
-
+/*!Get in touch btn*/
 .btn-primary {
-    border-color:rgba(255,255,255,.7);
-    color: #fff;
-    background-color:rgba(255,255,255,.7);
-    -webkit-transition: all .35s;
-    -moz-transition: all .35s;
-    transition: all .35s;
+  border-color: rgba(255, 255, 255, 0.7);
+  color: rgb(228, 222, 222);
+  background-color: rgb(154, 154, 154);
+  -webkit-transition: all 0.35s;
+  -moz-transition: all 0.35s;
+  transition: all 0.35s;
+  text-shadow: 1px 1px #524f4f;
+  
 }
 
 .btn-primary:hover,
@@ -374,19 +401,19 @@ fieldset[disabled] .btn-default.active {
 .btn-primary:active,
 .btn-primary.active,
 .open > .dropdown-toggle.btn-primary {
-    border-color: rgba(255,255,255,.7);
-    color: #fff;
-    background-color: rgba(255,255,255,.7);
+  border-color: rgba(237, 233, 233, 0.7);
+  color: rgb(94,94,94);
+  background-color: rgba(255, 251, 251, 0.7);
 }
 
 .btn-primary:active,
 .btn-primary.active,
 .open > .dropdown-toggle.btn-primary {
-    background-image: none;
+  background-image: none;
 }
 
 .btn-primary.disabled,
-.btn-primary[disabled],
+.btn-primary[],
 fieldset[disabled] .btn-primary,
 .btn-primary.disabled:hover,
 .btn-primary[disabled]:hover,
@@ -403,51 +430,50 @@ fieldset[disabled] .btn-primary:active,
 .btn-primary.disabled.active,
 .btn-primary[disabled].active,
 fieldset[disabled] .btn-primary.active {
-    border-color: rgba(255,255,255,.7);
-    background-color: rgba(255,255,255,.7);
+  border-color: rgba(255, 255, 255, 0.7);
+  background-color: rgba(255, 255, 255, 0.7);
 }
 
 .btn-primary .badge {
-    color: rgb(158, 158, 158);
-    background-color: white;
+  color: rgb(158, 158, 158);
+  background-color: rgb(94, 94, 94);
 }
 
-
 .btn {
-    border-radius: 300px;
-    text-transform: uppercase;
+  border-radius: 300px;
+  text-transform: uppercase;
 }
 
 .btn-lg {
-    padding: 15px 30px;
+  padding: 15px 30px;
 }
 
 ::-moz-selection {
-    text-shadow: none;
-    color: #fff;
-    background: #222;
+  text-shadow: none;
+  color: #fff;
+  background: #222;
 }
 
 ::selection {
-    text-shadow: none;
-    color: #fff;
-    background: #222;
+  text-shadow: none;
+  color: #fff;
+  background: #222;
 }
 
 img::selection {
-    color: #fff;
-    background: 0 0;
+  color: #fff;
+  background: 0 0;
 }
 
 img::-moz-selection {
-    color: #fff;
-    background: 0 0;
+  color: #fff;
+  background: 0 0;
 }
 
 .text-primary {
-    color: rgba(255,255,255,.7);
+  color: rgb(94, 94, 94));
 }
 
 .bg-primary {
-    background-color: rgba(255,255,255,.7);
+  background-color: rgb(94, 94, 94));
 }
